--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="../fonts/fonts.css" />
+    <link rel="stylesheet" href="./app/index.css" />
+    <link rel="stylesheet" href="./fonts/fonts.css" />
     <title>OWEM Tech |</title>
   </head>
   <body>
     <nav class="topnav">
-      <img src="../images/OWEM-TECH-WEB.png" alt="Logo" height="100%" />
+      <img src="./images/OWEM-TECH-WEB.png" alt="Logo" height="100%" />
     </nav>
 
     <nav id="topbar" class="topnav fixed hidden">
-      <img src="../images/OWEM-TECH-WEB.png" alt="Logo" height="100%" />
+      <img src="./images/OWEM-TECH-WEB.png" alt="Logo" height="100%" />
     </nav>
 
     <main>
@@ -23,7 +23,7 @@
           <h1>
             GATEWAY TO THE SIMPLIFIED LEARNING!!
           </h1>
-          <img src="../images/Image-01.png" />
+          <img src="./images/Image-01.png" />
         </header>
         <div class="captions">
           <div class="content">
@@ -47,7 +47,7 @@
       <section>
         <header>
           <h1>ABCD WORKSHOP</h1>
-          <img src="../images/Image-01.png" />
+          <img src="./images/Image-01.png" />
         </header>
       </section>
 
@@ -93,6 +93,6 @@
       </section>
     </main>
 
-    <script src="./index.js"></script>
+    <script src="./app/index.js"></script>
   </body>
 </html>
