--- a/index.html
+++ b/index.html
@@ -56,37 +56,34 @@
       </section>
 
       <section>
-        <div className="card" style>
-          <div className="card-header">
+        <div class="card">
+          <!-- <div class="card-header">
             <image width="100%" />
+          </div> -->
+          <div class="card-header">
+            <div class="title">
+              Title
+            </div>
+            <div class="description">
+              description
+            </div>
           </div>
-          <div className="card-body">
-            <div className="card-time-zone">
-              <span className="material-icons">schedule</span>
-              <span style family="sans-serif"> </span>
-              <span style>
-                to
-              </span>
-              <span style family="sans-serif">
-                to
-              </span>
-            </div>
-            <div className="card-body-title">
-              <span family="sans-serif" style>
-                title
-              </span>
-              <span family="sans-serif">
-                description
-              </span>
-            </div>
-            <div className="card-body-subtitle">
-              <div className="card-age-group">
-                <span className="material-icons">group</span>
-                <span family="sans-serif">fromAge</span>
-                <span family="sans-serif">to</span>
-                <span family="sans-serif">toAge</span>
+          <div class="image">
+            <img src="./images/vedhiyalodu_vilayadu.jpg" alt="Card" width="100%" />
+          </div>
+
+          <div class="card-body">
+            <span style>
+              to
+            </span>
+            <span style family="sans-serif">
+              to
+            </span>
+
+            <div class="card-body-subtitle">
+              <div class="card-age-group">
+                <button class="register-button">Register</button>
               </div>
-              <button></button>
             </div>
           </div>
         </div>
