--- a/index.html
+++ b/index.html
@@ -55,39 +55,7 @@
         <button>Register</button>
       </section>
 
-      <section>
-        <div class="card">
-          <!-- <div class="card-header">
-            <image width="100%" />
-          </div> -->
-          <div class="card-header">
-            <div class="title">
-              Title
-            </div>
-            <div class="description">
-              description
-            </div>
-          </div>
-          <div class="image">
-            <img src="./images/vedhiyalodu_vilayadu.jpg" alt="Card" width="100%" />
-          </div>
-
-          <div class="card-body">
-            <span style>
-              to
-            </span>
-            <span style family="sans-serif">
-              to
-            </span>
-
-            <div class="card-body-subtitle">
-              <div class="card-age-group">
-                <button class="register-button">Register</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
+      <section id="card-list"></section>
     </main>
 
     <script src="./app/index.js"></script>
