--- a/index.html
+++ b/index.html
@@ -56,6 +56,21 @@
       </section>
 
       <section id="card-list"></section>
+
+      <section class="footer">
+        <img src="./images/OWEM-TECH-WEB.png" width="150px" />
+        <div class="contact">
+          <div>
+            OWEM Team
+          </div>
+          <div>
+            <div>
+              <a href="mailto:hello@owem.xyz">hello@owem.xyz</a>
+            </div>
+            <a href="tel:+91-7904224186">7904224186</a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="./app/index.js"></script>
